# Hermes

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.sator  README.md  justfile  sator.Dockerfile  sparta.Dockerfile  trojan.Dockerfile
.notes/: kyle_questions.typ  main.typ  plan.md  project.md  questions.md  refs.bib  sparta.md  todo.md  todo.typ
agora/: Cargo.toml
agora/src/: lib.rs  log.rs
athens/: Cargo.toml  build.rs
athens/src/: client.rs  config.rs  lib.rs  main.rs
charts/: Cargo.toml
charts/src/: main.rs
documents/: refs.bib
documents/charts/: hello_world key pair.pem
documents/charts/src/: fetch.rs  main.rs  send.rs  user.rs
documents/progress_report/: main.typ
documents/report/: main.typ  refs.bib
documents/slides/: slides.typ
documents/slides/basic-polylux/: slides.typ
envoy/: Dockerfile  envoy.yaml
paper/: main.tex  main.typ  refs.bib
proto/: message.proto  proxy.proto  server.proto  user.proto
report/: main.typ  refs.bib
sator/: Cargo.toml  build.rs
sator/benches/: general.rs
sator/src/: main.rs
sparta/: Cargo.toml  Dockerfile  build.rs
sparta/src/: lib.rs  main.rs  sparta.rs
sparta/src/primitives/: mod.rs  oblivious_select.rs  omap.rs
sparta/src/primitives/avl/: balance.rs  iter.rs  mod.rs  test.rs
sparta/src/services/: message.rs  mod.rs  user.rs
sparta/src/structures/: messagestore.rs  mod.rs  userstore.rs
sparta/tests/: oram_test.rs  simple.rs
trojan/: Cargo.toml  build.rs
trojan/src/: main.rs
