[package]
name = "athens"
version = "0.1.0"
# edition = "2024"
edition = "2021"

[dependencies]
prost = "0.13.1"
tonic = "0.12.1"
tonic-middleware = "0.2.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", ] }
tokio-stream = "0.1"
async-stream = "0.2"

[build-dependencies]
tonic-build = "0.12"
