[package]
name = "sator"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13.1"
tonic = "0.12.1"
tonic-middleware = "0.2.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", ] }
tokio-stream = "0.1"
async-stream = "0.2"
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"

agora = {path = "../agora"}

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports" ,"async_tokio"] }

[[bench]]
name = "general"
harness = false
