[package]
name = "sator"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13.1"
tonic-middleware = "0.2.3"
tokio-stream = "0.1"
async-stream = "0.2"
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"

agora = {path = "../agora"}
hyper = { version = "1.6.0", features = ["client", "http1"] }

tonic = "0.12.1"
tokio-vsock = { version = "0.7.0", features = ["tonic012"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", ] }
tower = "0.4"
futures = "0.3"
hyper-client-sockets = { version = "0.6.0", features = ["hyper-util", "tokio-backend", "vsock"] }
http = "1.3.1"
bytes = "1.10.1"
http-body-util = "0.1.3"





[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports" ,"async_tokio"] }

[[bench]]
name = "general"
harness = false
