[package]
name = "sparta"
version = "0.1.0"
# edition = "2024"
edition = "2021"

[dependencies]
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.22"

prost = "0.13.1"
tonic = "0.12.1"
tonic-middleware = "0.2.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", ] }
tokio-stream = "0.1"
async-stream = "0.2"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"

color-eyre = "0.6.3"

dotenvy = "0.15.7"
nanoid = "0.4.0"
humantime = "2.1.0"

oram = "0.1"
rand = "=0.8.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
itertools = "0.14.0"


[build-dependencies]
tonic-build = "0.12"


