[package]
name = "sparta"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.22"

prost = "0.13.1"
tonic = "0.12.1"
tonic-middleware = "0.2.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", ] }
tokio-stream = "0.1"
async-stream = "0.2"

serde = { version = "1.0.203", features = ["derive"] }

color-eyre = "0.6.3"

dotenvy = "0.15.7"
humantime = "2.1.0"


ed25519-dalek = {version = "2.1.1", features = ["rand_core", "pkcs8", "pem", "serde"]}
rand_core = { version = "0.6.4", features = ["serde", "std"] }
bincode = {version = "2.0.1", features = ["serde"]}



oram = "0.2.0-pre.1"
rand = "=0.8.5"
clap = { version = "4.5.32", features = ["derive"] }



agora = {path = "../agora"}
lazy_static = "1.5.0"
tokio-vsock = { version = "0.7.0", features = ["tonic012"] }


[build-dependencies]
tonic-build = "0.12"

