[package]
name = "trojan"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13.1"
tonic-middleware = "0.2.3"
tokio-stream = "0.1"
async-stream = "0.2"
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"
agora = {path = "../agora"}
hyper-util = { version = "0.1.8", features = ["tokio"] }
ed25519-dalek = {version = "2.1.1", features = ["rand_core", "pkcs8", "pem", "serde"]}
rand_core = { version = "0.6.4", features = ["serde", "std"] }
bincode = {version = "2.0.1", features = ["serde"]}
[build-dependencies]
tonic-build = "0.12"
