[package]
name = "trojan"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13.1"
tonic-middleware = "0.2.3"
tokio-stream = "0.1"
async-stream = "0.2"

clap = { version = "4.5.31", features = ["derive"] }

color-eyre = "0.6.3"
agora = {path = "../agora"}

log = "0.4.22"
tonic = "0.12.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", ] }
tokio-vsock = { version = "0.7.0", features = ["tonic012"] }
serde = { version = "1.0.203", features = ["derive"] }
hyper-util = { version = "0.1.8", features = ["tokio"] }

tower = "0.4"
futures = "0.3"

[build-dependencies]
tonic-build = "0.12"
